# Penny

./: .gitignore  README.md  index.html
docs/: architecture.md  chase-lev.md  dev_thoughts.md
docs/experimental/: MGR-scheduler.md
penny-core/: CMakeLists.txt  CMakePresets.json
penny-core/native/: CMakeLists.txt
penny-core/toolchains/: emscripten-ecc.cmake  wasi-sdk.cmake
penny-core/wasm-ecc/: CMakeLists.txt  main.c
penny-core/wasm-wasi/: CMakeLists.txt  main.c
penny-js/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
penny-js/src/: benchmark.ts  index.ts
penny-js/src/FunctionTable/: vtable.ts
penny-js/src/deque/: deque.ts
penny-js/src/scheduler/: mem-model.ts  scheduler.ts
penny-js/src/threads/: thread.ts
penny-js/src/worker/: test_worker.js  worker.js
penny-rs/: Cargo.toml
src/: benchmark.ts  index.js  index.ts
src/FunctionTable/: vtable.ts
src/deque/: deque.ts
src/penny-core/: CMakeLists.txt
src/penny-core/include/: deque.h  scheduler.h
src/penny-core/src/: deque.c  memory.c  test.c
src/scheduler/: mem-model.ts  scheduler.ts
src/threads/: thread.js  thread.ts
src/worker/: worker.js
